--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -53,6 +53,12 @@
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+    const totalYears = inventors.reduce((totalYears, inventor) => {
+      const lifespan = inventor.passed - inventor.year;
+      return totalYears + lifespan;
+    }, 0);
+
+    console.log(totalYears);
 
     // 5. Sort the inventors by years lived
 
