--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -71,6 +71,11 @@
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
+    const boulevards = Array.from(document.querySelectorAll('.mw-category a'))
+      .map(link => link.textContent)
+      .filter(name => name.includes('de'));
+
+    console.log(boulevards);
 
 
     // 7. sort Exercise
