--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -71,15 +71,16 @@
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
-    const boulevards = Array.from(document.querySelectorAll('.mw-category a'))
+    /* const boulevards = Array.from(document.querySelectorAll('.mw-category a'))
       .map(link => link.textContent)
       .filter(name => name.includes('de'));
 
-    console.log(boulevards);
+    console.log(boulevards); */
 
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
