--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -80,7 +80,13 @@
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    const alpha = people.sort((a, b) => {
+      const aLast = a.split(', ')[0];
+      const bLast = b.split(', ')[0];
+      return aLast.localeCompare(bLast);
+    });
     
+    console.log(alpha);
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
