--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -27,6 +27,15 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+
+    const isAdult = people.some(function(person) {
+      const currentYear = new Date().getFullYear();
+      const age = currentYear - person.year;
+      return age >= 19;
+    });
+
+    console.log({isAdult});
+
     // Array.prototype.every() // is everyone 19 or older?
 
     // Array.prototype.find()
