--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -38,6 +38,14 @@
 
     // Array.prototype.every() // is everyone 19 or older?
 
+    const allAdults = people.every(function(person) {
+      const currentYear = new Date().getFullYear();
+      const age = currentYear - person.year;
+      return age >= 19;
+    });
+
+    console.log({allAdults});
+
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
